--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 	
 	<!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6HBV3WGYZ7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6HBV3WGYZ7');
+</script>
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
     
